<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Rhythm</string>
    <string name="tagLine">Bring music to life</string>
    <string name="song_name">Song Name</string>
    <string name="artist_name">Artist Name</string>
    <string name="options">options</string>
    <string name="backbtn">back btn</string>
    <string name="music_cover">music_cover</string>
    <string name="pre">pre</string>
    <string name="next">next</string>
    <string name="no_song_available">No Song Available.</string>
    <string name="no_playlist">No PlayList here.\nCreate PlayList by clicking the\nicon below.</string>
    <string name="nofav">No favourites here.\nAdd songs here by liking the\nsongs through Music player.</string>
    <string name="mymusic">MyMusic</string>
    <string name="addmusic">add_music</string>
    <string name="playlist">Playlist</string>
    <string name="search_icon">Search_icon</string>
    <string name="online_music">Online Music</string>
    <string name="liked_music">Liked Music</string>
    <string name="playlist_button">PlayList</string>
    <string name="online">Online</string>
    <string name="liked_songs">Liked Songs</string>
    <string name="total_songs">Total Songs</string>
    <string name="start">0000</string>
    <string name="end">end</string>
    <string name="favorites">Favorites</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="feedback">Feedback</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="music_makes_me_happy">Music makes me happy</string>
    <string name="musicimage">musicImage</string>
    <string name="search">Search</string>
    <string name="offlineNow">You are not connected to the internet.\nConnect to a network\nand then come back to this activity.</string>
    <string name="total">Total</string>
    <string name="noResults">No results were found </string>
    <string name="item">item</string>
    <string name="album_name">Album Name</string>
    <string name="cimage">cImage</string>
    <string name="FifteenMin"> 15 minutes </string>
    <string name="thirtyMin"> 30 minutes </string>
    <string name="sixtyMin"> 60 minutes </string>
    <string name="imagetimer">imageTimer</string>
    <string name="playlist_name">PlayList_name</string>
    <string name="del_btn">del_btn</string>
    <string name="playlist_name_dialog">PlayList Name</string>
    <string name="folder">Folder</string>
    <string name="remove_playlist">Remove All</string>
    <string name="add_song">Add Song</string>
    <string name="add_song_playlist">This PlayList is emplty.\nAdd songs here by\nclicking the add button below</string>
    <string name="created_on">Created On</string>
    <string name="suggestion">Topic, query, suggestions, bugs, etc.</string>
    <string name="email">Your Email (Optional)</string>
    <string name="send">Send</string>
    <string name="set_theme">Set Theme</string>
    <string name="sort_by">Sort By</string>
    <string name="version">Version</string>
    <string name="tick">Tick</string>
    <string name="onlineWelcome">Welcome to Online Music</string>
    <string name="menu">menu</string>
    <string name="categories">Categories</string>
    <string name="english">English</string>
    <string name="search_online">Search Online</string>
</resources>