<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Activities.PlayListDetails">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/_20sdp"
        android:paddingTop="@dimen/_15sdp"
        android:paddingEnd="@dimen/_20sdp"
        android:paddingBottom="@dimen/_15sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/backToList2"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/back" />

        <TextView
            android:id="@+id/playListFolderName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_toEndOf="@id/backToList2"
            android:text="@string/folder"
            android:textColor="@color/white"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:orientation="horizontal"
        android:layout_marginTop="2dp"
        android:background="@color/black"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header">

        <androidx.cardview.widget.CardView
            android:id="@+id/folderContainer"
            android:layout_width="220dp"
            android:layout_height="match_parent"
            android:background="@color/black"
            app:cardCornerRadius="20dp">

            <ImageView
                android:id="@+id/imgDetails"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/song_name"
                android:src="@drawable/music"
                android:scaleType="fitXY"/>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/folderName"
            android:layout_toEndOf="@id/folderContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/playlist_name"
            android:padding="5dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:gravity="center|start"
            android:background="@color/black"
            android:singleLine="true"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"/>

        <TextView
            android:id="@+id/total_songs"
            android:layout_toEndOf="@id/folderContainer"
            android:layout_below="@id/folderName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:text="@string/total_songs"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp" />

        <TextView
            android:id="@+id/created"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="20dp"
            android:layout_toEndOf="@id/folderContainer"
            android:layout_alignParentBottom="true"
            android:text="@string/created_on"
            android:textColor="@color/white"
            android:textSize="14sp"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/noSongsPlaylist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_song_playlist"
        android:textColor="@color/black"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="invisible"/>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/playListDetailsRV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="310dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear"
        android:scrollbarThumbVertical="@drawable/scroll"
        android:scrollbars="vertical"
        android:layout_marginTop="5dp"/>

    <LinearLayout
        android:id="@+id/folders"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/_1sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/addSong"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableLeft="@drawable/add"
            android:contentDescription="@string/online_music"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:text="@string/add_song"
            android:textColor="@color/black"
            android:textAllCaps="false"
            tools:ignore="RtlHardcoded" />


        <Button
            android:id="@+id/removeAll"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableLeft="@drawable/remove_circle"
            android:drawableTint="@color/black"
            android:contentDescription="@string/liked_music"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:text="@string/remove_playlist"
            android:textColor="@color/black"
            android:textAllCaps="false"
            tools:ignore="RtlHardcoded" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>