<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Activities.OnlineActivity">

    <LinearLayout
        android:id="@+id/searchHead"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/black"
        android:gravity="center_vertical"
        android:padding="@dimen/_15sdp">

        <ImageView
            android:id="@+id/backbtn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/back"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="@string/backbtn" />

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="match_parent"
           android:paddingHorizontal="15dp"
           android:text="@string/onlineWelcome"
           android:gravity="center_vertical"
           android:textColor="@color/white"
           android:textSize="21sp"
           android:textStyle="bold"
           android:singleLine="true"
           android:ellipsize="marquee"
           android:marqueeRepeatLimit="marquee_forever"/>

    </LinearLayout>


        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/astronaut"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:lottie_rawRes="@raw/astrunaut"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/offlineText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginBottom="130dp"
            android:text="@string/offlineNow"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:visibility="gone"/>

   <LinearLayout
       android:id="@+id/subhead"
       android:layout_below="@id/searchHead"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:paddingHorizontal="15dp"
       android:paddingVertical="5dp"
       android:background="#474646">

       <EditText
           android:id="@+id/searchOnline"
           android:layout_width="250dp"
           android:layout_height="wrap_content"
           android:layout_marginTop="5dp"
           android:layout_marginBottom="5dp"
           android:layout_marginStart="40dp"
           android:autofillHints="none"
           android:background="@drawable/online_search_bar"
           android:hint="@string/search_online"
           android:inputType="text"
           android:paddingHorizontal="15dp"
           android:paddingVertical="10dp"
           android:singleLine="true"
           android:textColor="@color/white"
           android:textColorHint="@color/white" />

       <ImageButton
           android:id="@+id/iconSearch"
           android:layout_width="35dp"
           android:layout_height="35dp"
           android:layout_marginTop="9dp"
           android:layout_marginStart="-40dp"
           android:background="@drawable/search_icon_bg"
           android:contentDescription="@string/search_icon"
           android:src="@drawable/search"
           app:tint="@color/white" />

   </LinearLayout>

<!--    <TextView-->
<!--        android:id="@+id/totalSongs"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_below="@id/subhead"-->
<!--        android:text="@string/total"-->
<!--        android:paddingHorizontal="10dp"-->
<!--        android:layout_marginVertical="5dp"/>-->

        <ScrollView
            android:id="@+id/scroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/subhead">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/songsRV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="10dp" />
            </LinearLayout>

        </ScrollView>


    </RelativeLayout>
