<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/fisrtTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/time"
            android:layout_margin="8dp"
            android:contentDescription="@string/FifteenMin" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/FifteenMin"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:padding="8dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/secondTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/time"
            android:layout_margin="8dp"
            android:contentDescription="@string/FifteenMin" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/thirtyMin"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:padding="8dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/thirdTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/time"
            android:layout_margin="8dp"
            android:contentDescription="@string/FifteenMin" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/sixtyMin"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:padding="8dp"/>

    </LinearLayout>

</LinearLayout>