<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/categoryRoot"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="3dp"
    android:backgroundTint="@color/white"
    android:layout_gravity="center_horizontal"
    android:elevation="6dp">

    <ImageView
        android:id="@+id/coverImg"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="15dp"
        android:scaleType="fitXY"
        android:src="@drawable/music"
        android:contentDescription="@string/music_cover" />
    
    <TextView
        android:id="@+id/nameC"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingBottom="5dp"
        android:layout_marginStart="100dp"
        android:text="@string/english"
        android:background="@color/white"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:singleLine="true"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit="marquee_forever"/>

    <TextView
        android:id="@+id/album"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:paddingBottom="5dp"
        android:layout_marginStart="100dp"
        android:text="@string/english"
        android:background="@color/white"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:singleLine="true"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit="marquee_forever"/>

    <TextView
        android:id="@+id/duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:paddingBottom="5dp"
        android:layout_marginEnd="40dp"
        android:layout_gravity="end"
        android:text="@string/start"
        android:background="@color/white"
        android:textColor="@color/black"
        android:textSize="16sp"/>

    <ImageButton
        android:id="@+id/playFake"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/play"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="220dp"
        android:contentDescription="@string/music_cover"
        android:visibility="invisible"/>


</androidx.cardview.widget.CardView>